CSharp: VS 2019 fails RunCMake.CSharpCustomCommand test
In a build tree of CMake itself with VS 2019 preview 4 or the RC, running the test via ctest -C Debug -R RunCMake.CSharpCustomCommand -V
fails with:
Generating test.cs
Invalid parameter to SETLOCAL command
...
C:\...\Tests\RunCMake\CSharpCustomCommand\CommandWithOutput-build\CSharpCustomCommand.csproj(88,5): error MSB3073: The command "setlocal "C:\...\bin\cmake.exe" -E copy_if_different ..." exited with code 1.
The actual .csproj
file on disk contains:
<Exec Command="echo Generating test.cs" />
<Exec Command="setlocal
"C:\...\bin\cmake.exe" -E copy_if_different ...
..." />
which looks correct, but running MSBuild fails as above.