VS: Encode newlines in XML attributes

Encode `\n` as `&#10;` to avoid generating a literal newline inside an
XML attribute.  This is more readable and also fixes custom commands in
`.csproj` files with VS 2019 RC.

Fixes: #19001